[gd_scene load_steps=10 format=2]

[ext_resource path="res://images/snow.png" type="Texture" id=1]
[ext_resource path="res://modelscenes/snowground.tscn" type="PackedScene" id=2]
[ext_resource path="res://modelscenes/hoodedman.tscn" type="PackedScene" id=3]
[ext_resource path="res://modelscenes/pine.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/AncestorBow.gd" type="Script" id=7]

[sub_resource type="ProceduralSky" id=5]
sky_top_color = Color( 0.121569, 0.0784314, 0.6, 1 )
sky_horizon_color = Color( 0.00784314, 0.00784314, 0.0627451, 1 )
sky_energy = 0.5
ground_bottom_color = Color( 0.352941, 0.372549, 0.588235, 1 )
ground_horizon_color = Color( 0.545098, 0.576471, 0.619608, 1 )
sun_color = Color( 0.862745, 0.847059, 0.482353, 1 )
sun_latitude = 69.7
texture_size = 0

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 5 )
background_color = Color( 0.184314, 0.113725, 0.376471, 1 )

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
flags_do_not_receive_shadows = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
albedo_texture = ExtResource( 1 )
emission_enabled = true
emission = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
emission_texture = ExtResource( 1 )

[sub_resource type="QuadMesh" id=4]
material = SubResource( 6 )
size = Vector2( 0.5, 0.7 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 7 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="CPUParticles" type="CPUParticles" parent="WorldEnvironment"]
transform = Transform( 0.605317, -0.0122775, 0.79589, -0.0200241, 0.99933, 0.0306452, -0.795733, -0.0344869, 0.604665, 0.495167, 7.31411, 0 )
amount = 50
lifetime = 10.0
mesh = SubResource( 4 )
emission_shape = 2
emission_box_extents = Vector3( 10, 1, 10 )
spread = 50.0
gravity = Vector3( 0, -0.5, 0 )
initial_velocity = 1.0
angular_velocity = 1.0
radial_accel = 1.0
radial_accel_random = 1.0
tangential_accel = 7.15
angle = 1.0
angle_random = 1.0

[node name="snowground" parent="." instance=ExtResource( 2 )]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.910669, 0.413137, -1.95771e-07, -0.394775, 0.870196, 0.294808, 0.121796, -0.268472, 0.955557, -29.1209, 14.1223, 3.97127 )
light_energy = 0.7
light_indirect_energy = 0.7
shadow_enabled = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.98597, 0, 0.166924, 0, 1, 0, -0.166924, 0, 0.98597, 1.07139, -0.319961, 4.35993 )

[node name="pine" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.94743, -1.53685, -9.41676 )

[node name="pine2" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 0.801833, 0, 0, 0, 0.556626, -12.5555, -1.53685, -8.69041 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="hoodedman" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, -0.933452, 0 )

[node name="ArrowFly" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ArrowFly" to="." method="_on_ArrowFly_timeout"]
